--- a/WebTools/res/css/components.css
+++ b/WebTools/res/css/components.css
@@ -99,8 +99,8 @@
     left: 140px;
     top: -38px;
     width: 150px;
-    background-color: #906F9A;
-    color: white;
+    background-color: #9999FF;
+    color: black;
     padding: 10px 10px 60px 10px;
     z-index: 10;
     border-radius: 0px 10px 10px 0px;
