accept additional Klingon fields on finishing touches screen

--- a/WebTools/res/css/components.css
+++ b/WebTools/res/css/components.css
@@ -184,6 +184,9 @@
     margin-right: 5px;
     font-family: lcars;
     font-size: large;
+    min-width: 45px;
+    text-align: right;
+    text-transform: uppercase;
 }
 
 .view-character {
