- first pass at implementing a dialog box for choosing a character sheet template

--- a/WebTools/res/css/dialog.css
+++ b/WebTools/res/css/dialog.css
@@ -66,6 +66,10 @@
     cursor: pointer;
 }
 
+.dialog-container .sheet-selection-item.selected {
+    border: 1px solid white;
+}
+
 .dialog-container .sheet-selection-item  .sheet-selection-item-name {
   width: 200px;
   min-height: 45px;
