--- a/WebTools/src/css/common.css
+++ b/WebTools/src/css/common.css
@@ -5,6 +5,10 @@
     font-style: normal;
 }
 
+.p-0 {
+    padding: 0 !important;
+}
+
 #mainBody {
 	width: 100%;
 	height: 100%;
@@ -15,6 +19,24 @@
     margin: 40px;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+h3, h4, h5 {
+    line-height: 1.2;
+    margin-top: 0rem;
+    margin-bottom: .5rem;
+}
+
+h3 {
+    font-size: 1.75rem;
+}
+
+h4 {
+    font-size: 1.5rem;
+}
+
+h5 {
+    font-size: 1.25rem;
 }
 
 .arrow-up {
@@ -35,6 +57,41 @@
 		-moz-transition: all .2s ease;
 		-o-transition: all .2s ease;
 	transition: all .2s ease;
+}
+
+table.stats-block tr td:nth-child(even) {
+    padding-right: 15px;
+}
+
+table.stats-block tr:nth-child(even) td {
+    padding-bottom: 10px;
+}
+.stat-name {
+    padding: 4px;
+    width: 100px;
+    border-radius: 10px 0 0 10px;
+    text-align: right;
+    text-transform: uppercase;
+    min-height: 13.5px;
+}
+.stat-name.purple, .stat-value.purple {
+    background-color: #906F9A;
+}
+.stat-name.orange, .stat-value.orange {
+    background-color: #F89B24;
+}
+.stat-name.red, .stat-value.red {
+    background-color: #CC6666;
+}
+
+.stat-value {
+    background-color: #906F9A;
+    padding: 4px;
+    width: 26px;
+    border-radius: 0 10px 10px 0;
+    text-align: center;
+    text-transform: uppercase;
+    min-height: 13.5px;
 }
 
 .arrow-down {
@@ -104,16 +161,28 @@ input[type=checkbox] {
     -webkit-appearance: none;
     -moz-appearance: none;
 }
-    input[type=radio]:checked,
-    input[type=checkbox]:checked {
-        background-color: #906F9A;
-        border: 2px solid #906F9A;
-    }
+input[type=radio]:checked,
+input[type=checkbox]:checked {
+    background-color: #906F9A;
+    border: 2px solid #906F9A;
+}
 
-    input[type=radio]:focus,
-    input[type=checkbox]:focus {
-        outline: 0;
-    }
+.modal-content input[type=radio],
+.modal-content input[type=checkbox] {
+    border: 2px solid #B5B3D8;
+}
+
+.modal-content input[type=radio]:checked,
+.modal-content input[type=checkbox]:checked {
+    background-color: #B5B3D8;
+    border: 2px solid #B5B3D8;
+}
+
+
+input[type=radio]:focus,
+input[type=checkbox]:focus {
+    outline: 0;
+}
 
 a,
 a:hover {
@@ -412,6 +481,10 @@ table.selection-list {
         padding: 5px;
         border-bottom: 1px solid rgba(128, 128, 128, 0.4);
     }
+
+.text-selection {
+    color: #DE84B7;
+}
 
 table.aspect-list td:first-child {
     width: 50%;
