--- a/WebTools/src/css/components.css
+++ b/WebTools/src/css/components.css
@@ -23,7 +23,7 @@
 
 .button-small {
     width: 120px;
-    padding: 15px;
+    padding: 15px !important;
     background-color: #B5B3D8;
     color: black !important;
     text-align: right;
