--- a/WebTools/src/css/common.css
+++ b/WebTools/src/css/common.css
@@ -9,6 +9,14 @@
     padding: 0 !important;
 }
 
+.p-2 {
+    padding: 0.5rem !important;
+}
+.pt-2 {
+    padding-top: 0.5rem !important;
+}
+
+
 #mainBody {
 	width: 100%;
 	height: 100%;
@@ -58,21 +66,16 @@ h5 {
 		-o-transition: all .2s ease;
 	transition: all .2s ease;
 }
-
-table.stats-block tr td:nth-child(even) {
-    padding-right: 15px;
-}
-
-table.stats-block tr:nth-child(even) td {
-    padding-bottom: 10px;
-}
+/* ---- Stats Block ----- */
 .stat-name {
+    display: inline-block;
     padding: 4px;
     width: 100px;
     border-radius: 10px 0 0 10px;
     text-align: right;
     text-transform: uppercase;
-    min-height: 13.5px;
+    height: 14px;
+    margin: 0 0.25rem 0 0;
 }
 .stat-name.purple, .stat-value.purple {
     background-color: #906F9A;
@@ -84,14 +87,50 @@ table.stats-block tr:nth-child(even) td {
     background-color: #CC6666;
 }
 
+.stats-block, .panel div.stats-block {
+    padding: 0;
+}
+
+.stats-row, .stat, .panel div.stat, .panel div.stats-row {
+    padding: 0 15px 3px 0;
+}
+
+.stats-row {
+    display: flex;
+}
+
 .stat-value {
-    background-color: #906F9A;
+    display: inline-block;
     padding: 4px;
     width: 26px;
     border-radius: 0 10px 10px 0;
     text-align: center;
     text-transform: uppercase;
-    min-height: 13.5px;
+    height: 14px;
+    margin: 0;
+}
+
+@media screen and (min-width: 0px) and (max-width: 975px) {
+    
+    .stats-row {
+        display: block;
+    }
+    .stat-value {
+        font-size: 10px;
+        height: 11px;
+        width: 20px;
+    }
+    .stat-name {
+        font-size: 10px;
+        height: 11px;
+        width: 80px;
+    }
+}
+
+/* ---- END: Stats Block ----- */
+
+.w-100 {
+    width: 100% !important;
 }
 
 .arrow-down {
@@ -99,7 +138,6 @@ table.stats-block tr:nth-child(even) td {
 }
 
 b {
-    font-weight: lighter;
     text-transform: uppercase;
 }
 
@@ -549,6 +587,7 @@ table.aspect-list td:first-child {
 }
 
 @media screen and (min-width: 0px) and (max-width: 800px) {
+    
     #app {
         margin: 10px 14px 5px -20px;
     }
@@ -642,6 +681,7 @@ table.aspect-list td:first-child {
         padding: 10px;
         font-size: x-small; 
     }
+
 }
 
 /* ANIMATIONS */
