--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -75,6 +75,7 @@
 
 .die-value {
     color: black;
+    padding: 5px;
 }
 
 .eq {
@@ -192,6 +193,7 @@ label.textinput-label {
     min-width: 50px;
     text-align: right;
     text-transform: uppercase;
+    padding: 5px;
 }
 
 .view-character {
