minor final tweaks

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -22,11 +22,20 @@ $lcars-very-light-pink: #f7bbdd;
 .p-2 {
     padding: 0.5rem !important;
 }
+.p-3 {
+    padding: 0.75rem !important;
+}
 .pt-2 {
     padding-top: 0.5rem !important;
 }
+.pt-3 {
+    padding-bottom: 0.75rem !important;
+}
 .pb-2 {
     padding-bottom: 0.5rem !important;
+}
+.pb-3 {
+    padding-bottom: 0.75rem !important;
 }
 
 
