--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -29,7 +29,10 @@ $lcars-very-light-pink: #f7bbdd;
     padding-top: 0.5rem !important;
 }
 .pt-3 {
-    padding-bottom: 0.75rem !important;
+    padding-top: 0.75rem !important;
+}
+.pt-4 {
+    padding-top: 1rem !important;
 }
 .pb-2 {
     padding-bottom: 0.5rem !important;
