--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -5,4 +5,5 @@
 @import './dialog.scss';
 @import './skills.scss';
 @import './sourceselection.scss';
+@import './specialChars.scss';
 @import './rows.scss';
