Starship outline image on the Spaceframe selection page; minor tweaks to the TNG PDF forms

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -53,6 +53,10 @@ $lcars-very-light-pink: #f7bbdd;
     .d-md-table-cell {
         display: table-cell !important;
     }
+
+    .d-md-block {
+        display: block !important;
+    }
 }
 
 
