--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -41,6 +41,13 @@ $lcars-very-light-pink: #f7bbdd;
     padding-bottom: 0.75rem !important;
 }
 
+.mt-3 {
+    margin-top: 0.75rem !important;
+}
+.mb-3 {
+    margin-bottom: 0.75rem !important;
+}
+
 .d-none {
     display: none !important;
 }
