improvements to the handling of attributes, brought about by implementing the Player's Guide

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -22,6 +22,12 @@ $lcars-very-light-pink: #f7bbdd;
 .p-2 {
     padding: 0.5rem !important;
 }
+.pl-2 {
+    padding-left: 0.5rem !important;
+}
+.pr-2 {
+    padding-right: 0.5rem !important;
+}
 .p-3 {
     padding: 0.75rem !important;
 }
