rewrite the behaviour of majors to support new Player's Guide rules

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -233,6 +233,10 @@ b {
     text-transform: uppercase;
 }
 
+.skill-name b {
+    text-transform: none;
+}
+
 body {
     width: 100%;
     height: 100%;
