add all of the Talents from the Player's Guide; - provide a way to specify GM's decision on the inclusion of esoteric talents; - add complex rules for the handling of Advanced Team Dynamics, which is a somewhat complicated Talent, pre-requisite-wise.

--- a/WebTools/src/scss/specialChars.scss
+++ b/WebTools/src/scss/specialChars.scss
@@ -12,7 +12,7 @@
 .delta::after {
     font-size: 1rem;
     content: "A";
-    color: inherit;
+    color: #F9AC76;
     font-family: 'trekarrows';
 }
 
