--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -29,29 +29,38 @@ $lcars-very-light-pink: #f7bbdd;
     padding-right: 0.5rem !important;
 }
 .p-3 {
-    padding: 0.75rem !important;
+    padding: 1rem !important;
 }
 .pt-2 {
     padding-top: 0.5rem !important;
 }
 .pt-3 {
-    padding-top: 0.75rem !important;
+    padding-top: 1rem !important;
 }
 .pt-4 {
-    padding-top: 1rem !important;
+    padding-top: 1.5rem !important;
 }
 .pb-2 {
     padding-bottom: 0.5rem !important;
 }
 .pb-3 {
-    padding-bottom: 0.75rem !important;
+    padding-bottom: 1rem !important;
 }
 
+.mt-2 {
+    margin-top: 0.5rem !important;
+}
 .mt-3 {
-    margin-top: 0.75rem !important;
+    margin-top: 1rem !important;
+}
+.mt-4 {
+    margin-top: 1.5rem !important;
+}
+.mb-2 {
+    margin-bottom: 0.5rem !important;
 }
 .mb-3 {
-    margin-bottom: 0.75rem !important;
+    margin-bottom: 1rem !important;
 }
 
 .d-none {
