--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -15,54 +15,6 @@ $lcars-light-orange: #FFCC66;
 $lcars-light-pink: #DE84B7;
 $lcars-very-light-pink: #f7bbdd;
 
-.p-0 {
-    padding: 0 !important;
-}
-
-.p-2 {
-    padding: 0.5rem !important;
-}
-.pl-2 {
-    padding-left: 0.5rem !important;
-}
-.pr-2 {
-    padding-right: 0.5rem !important;
-}
-.p-3 {
-    padding: 1rem !important;
-}
-.pt-2 {
-    padding-top: 0.5rem !important;
-}
-.pt-3 {
-    padding-top: 1rem !important;
-}
-.pt-4 {
-    padding-top: 1.5rem !important;
-}
-.pb-2 {
-    padding-bottom: 0.5rem !important;
-}
-.pb-3 {
-    padding-bottom: 1rem !important;
-}
-
-.mt-2 {
-    margin-top: 0.5rem !important;
-}
-.mt-3 {
-    margin-top: 1rem !important;
-}
-.mt-4 {
-    margin-top: 1.5rem !important;
-}
-.mb-2 {
-    margin-bottom: 0.5rem !important;
-}
-.mb-3 {
-    margin-bottom: 1rem !important;
-}
-
 .d-none {
     display: none !important;
 }
@@ -89,7 +41,7 @@ $lcars-very-light-pink: #f7bbdd;
 }
 
 #app {
-    margin: 40px;
+    margin: 20px 40px 40px 40px;
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -330,6 +282,11 @@ input[type=checkbox]:focus {
 a,
 a:hover {
     color: #F89B24;
+}
+
+.breadcrumb-item a,
+.breadcrumb-item a:hover {
+    color: #cc6666;
 }
 
 .content-container {
