--- a/WebTools/src/scss/skills.scss
+++ b/WebTools/src/scss/skills.scss
@@ -8,12 +8,14 @@
     font-size: 20px;
     margin-bottom: 2px;
     border-bottom: 1px solid rgba(95, 100, 62, 0.2);
+    line-height: normal;
 }
 
 .skill-expertise,
 .skill-focus {
     font-size: 16px;
     padding-left: 20px !important;
+    line-height: normal;
 }
 
 .skill-expertise-value,
