--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -77,6 +77,7 @@
 .die-value {
     color: black;
     padding: 5px;
+    line-height: normal;
 }
 
 .eq {
@@ -191,7 +192,7 @@ label.textinput-label {
     margin-right: 5px;
     font-family: lcars;
     font-size: large;
-    min-width: 50px;
+    min-width: 60px;
     text-align: right;
     text-transform: uppercase;
     padding: 5px;
