--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -14,6 +14,7 @@ $breadcrumb-padding-x: 1.5rem;
 
 @import '~bootstrap/scss/breadcrumb';
 @import '~bootstrap/scss/grid';
+@import '~bootstrap/scss/type';
 @import '~bootstrap/scss/utilities/display';
 @import '~bootstrap/scss/utilities/flex';
 @import '~bootstrap/scss/utilities/spacing';
