add the ability to view a supporting character and regenerate the PDF file

--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -62,8 +62,8 @@
     background-color: white;
     border: 3px solid transparent;
     border-radius: 2px;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     margin-right: 10px;
     vertical-align: middle;
     text-align: center;
@@ -77,6 +77,7 @@
 .die-value {
     color: black;
     padding: 5px;
+    padding-top: 8px;
     line-height: normal;
 }
 
