--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -657,6 +657,18 @@ table.aspect-list td:first-child {
     max-width: 50%;
 }
 
+.source.unavailable {
+    background-color: #aaaaaa;
+    border-color: #aaaaaa;
+    cursor: not-allowed;
+
+    :hover {
+        background-color: #aaaaaa;
+        border-color: #aaaaaa;
+    }
+}
+
+
 .source-name,
 .source-select {
     display: inline-block;
