Finalize the Cadet stuff, including cadet roles. Provide some organization of sources

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -641,10 +641,10 @@ table.aspect-list td:first-child {
     font-size: large;
     text-transform: uppercase;
     width: 126px;
-    margin-top: 15px;
+    margin-top: 5px;
+    margin-bottom: 10px;
     cursor: pointer;
     opacity: 0.8;
-    display: inline-block;
     line-height: normal;
 }
     .source:hover {
