- implement a first version of a star mapping generator

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -787,7 +787,7 @@ table.aspect-list td:first-child {
         max-width: 100%;
     }
 
-    .selection-list td div.button-small {
+    .selection-list td div.button-small, .selection-list td button.button-small {
         display: none;
     }
 
