Fix for bcholmes#63; - improvements to star maps; - reference data improvements

--- a/WebTools/src/scss/map.scss
+++ b/WebTools/src/scss/map.scss
@@ -1,5 +1,10 @@
 
 .sectorMap {
-    height: 500px;
-    width: 500px;
+    height: 450px;
+    width: 450px;
+}
+
+.lcars-decoration-left, .lcars-decoration-right {
+    height: 450px;
+    width: 125px;
 }
