more spaceframes; - handle luminosity on star systems

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -1,11 +1,4 @@
-﻿@font-face {
-    font-family: 'lcars';
-    src: url('../fonts/tt0106m0.TTF') format('truetype');
-    font-weight: lighter;
-    font-style: normal;
-}
-
-.d-none {
+﻿.d-none {
     display: none !important;
 }
 
