--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'lcars';
+    src: url('../fonts/tt0106m0.TTF') format('truetype');
+    font-weight: lighter;
+    font-style: normal;
+}
+
 $lcars-salmon: #CC6666;
 $lcars-purple: #906F9A;
 $lcars-brighter-purple: #9179B7;
