--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -41,6 +41,7 @@ $breadcrumb-padding-x: 1.5rem;
 @import '~bootstrap/scss/utilities/display';
 @import '~bootstrap/scss/utilities/flex';
 @import '~bootstrap/scss/utilities/spacing';
+@import '~bootstrap/scss/utilities/sizing';
 @import '~bootstrap/scss/utilities/text';
 
 @import './common.scss';
