upgrade a number of the project dependencies, and update some areas of the code that needed to change to support the new versions. Requires an npm install.

--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -22,6 +22,8 @@ $primary: $lcars-purple;
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 
+$bootstrap-icons-font-src: url("~bootstrap-icons/font/fonts/bootstrap-icons.woff2") format("woff2"), url("~bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff");
+
 @import '~bootstrap-icons/font/bootstrap-icons.scss';
 
 $breadcrumb-bg: #130e1a;
