--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -23,8 +23,8 @@
 }
 
 #mainBody {
-	width: 100%;
-	height: 100%;
+	width: calc(100% - 20px);
+	height: calc(100% - 20px);
     margin: 10px;
 }
 
@@ -392,7 +392,6 @@ h2.header-text {
 	.lcar-header-end {
 		border-radius: 0px 40px 40px 0px;
 		max-width: 30px;
-        margin-right: 10px;
 	}
 
 	.page-header {
