--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -82,6 +82,7 @@ h5 {
     height: 22px;
     margin: 0 0.25rem 0 0;
     line-height: normal;
+    text-overflow: ellipsis;
 }
 
 .stat-entry-name {
