--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -18,6 +18,38 @@
         opacity: 1.0;
     }
 
+.btn {
+    border-radius: 20px;
+    text-align: right;
+    font-family: lcars;
+    font-size: x-large;
+    border: 0;
+}
+
+.btn:not(.btn-link) {
+    padding: 15px;
+    min-width: 250px;
+}
+
+.btn.btn-sm {
+    min-width: 150px;
+}
+
+.btn-primary {
+    background-color: #B5B3D880;
+    color: black;
+}
+
+.btn-primary:hover {
+    background-color: #B5B3D8;
+    color: black;
+}
+
+.btn-primary:disabled {
+    background-color: #aaaaaa;
+    color: black;
+}
+
 .button-cancel {
     background-color: #F48B6D !important;
 }
@@ -50,6 +82,11 @@
         margin-left: auto;
         margin-right: auto;
     }
+}
+
+.btn-lg {
+    font-size: x-large;
+    line-height: 1.5;
 }
 
 .header-text {
