- finish up the basic behaviour of the GM tracker

--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -17,6 +17,7 @@ $lcars-dull-pink: #c37ba4;
 $lcars-very-light-pink: #f7bbdd;
 
 $primary: $lcars-purple;
+$danger: $lcars-salmon;
 
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
