--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -234,14 +234,22 @@ html {
     width: 100%;
 }
 
-input,
-textarea {
+input {
     width: 300px;
     color: white !important;
     background-color: transparent;
     border: 2px solid #DE84B7;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+    padding: 6px;
+}
+
+textarea {
+    width: 300px;
+    color: white !important;
+    background-color: transparent;
+    border: 2px solid #DE84B7;
+    border-radius: 4px;
     padding: 6px;
 }
 
@@ -295,7 +303,7 @@ a:hover {
 
 .breadcrumb-item a,
 .breadcrumb-item a:hover {
-    color: #cc6666;
+    color: #9999ff;
 }
 
 .content-container {
