--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -26,6 +26,10 @@
     border: 0;
 }
 
+h1 .btn-link {
+    font-size: medium;
+}
+
 .btn:not(.btn-link) {
     padding: 15px;
     min-width: 250px;
