--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -82,6 +82,7 @@ h5 {
     height: 22px;
     margin: 0 0.25rem 0 0;
     line-height: normal;
+    overflow: hidden;
     text-overflow: ellipsis;
 }
 
@@ -108,6 +109,8 @@ h5 {
     font-size: large;
     background-color: $lcars-purple;
     line-height: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .stat-name.purple, .stat-value.purple {
@@ -133,6 +136,8 @@ h5 {
     height: 22px;
     margin: 0;
     line-height: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .stat-value.stat-value-sm {
