last-minute minor fixes

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -78,6 +78,7 @@ h5 {
     height: 22px;
     margin: 0 0.25rem 0 0;
     line-height: normal;
+    white-space:nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
