- more translation, primarily of the character type screen; add new fields to the main character view; quick fix for a problem that (currently) only manifests in French

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -128,6 +128,10 @@ h5 {
     background-color: #CC6666;
     color: white;
 }
+.stat-name.pink, .stat-value.pink {
+    background-color: $lcars-dull-pink;
+    color: white;
+}
 
 .stat-value {
     display: inline-block;
