--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -40,13 +40,18 @@ h1 .btn-link {
 }
 
 .btn-primary {
-    background-color: #B5B3D880;
+    background-color: rgba(181, 179, 216, .8);
     color: black;
 }
 
 .btn-primary:hover {
     background-color: #B5B3D8;
     color: black;
+}
+
+.btn-primary:focus, .btn-primary.focus {
+    background-color: #c4c2e0 !important;
+    color: black !important;
 }
 
 .btn-primary:disabled {
