- more work on modify flow; improvements to the copy function

--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -50,7 +50,7 @@ h1 .btn-link {
 }
 
 .btn-primary:focus, .btn-primary.focus {
-    background-color: #c4c2e0 !important;
+    background-color: #bcbbdc !important;
     color: black !important;
 }
 
