Add more dynamically-loadable portions of the application; - build out the NPC generation tool

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -267,7 +267,7 @@ textarea {
 
 select {
     display: block;
-    max-width: 280px;
+    max-width: 100%;
     width: 280px;
     color: white;
     background-color: #906F9A;
