--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -85,6 +85,12 @@ h1 .btn-link {
     text-transform: uppercase;
 }
 
+.button-column {
+
+    button {
+        display: block;
+    }
+}
 .button-container-centered {
 
     .button, .button-small {
