--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -47,8 +47,10 @@ $btn-font-family:             lcars;
 @import '~bootstrap/scss/grid';
 @import '~bootstrap/scss/type';
 @import '~bootstrap/scss/buttons';
+@import '~bootstrap/scss/spinners';
 @import '~bootstrap/scss/utilities/display';
 @import '~bootstrap/scss/utilities/flex';
+@import '~bootstrap/scss/utilities/screenreaders';
 @import '~bootstrap/scss/utilities/spacing';
 @import '~bootstrap/scss/utilities/sizing';
 @import '~bootstrap/scss/utilities/text';
